--- a/src/styles/LearnPage.css
+++ b/src/styles/LearnPage.css
@@ -1,3 +1,37 @@
+.l-text-container {
+    position: absolute;
+    top: 16%; /* Position item 50% from the top */
+    left: 60%; /* Position item 50% from the left */
+    max-width: 310px;
+
+    /* Firefox Scrollbar */
+    scrollbar-width: thin; /* Minimalist thin scrollbar */
+    scrollbar-color: rgba(0, 0, 0, 0.2) transparent; /* Dark thumb, transparent track */
+}
+
+.l-text-container:hover {
+    scrollbar-color: rgba(0, 0, 0, 0.4) transparent; /* Darker thumb on hover for Firefox */
+}
+
+/* Chrome, Edge, and Safari Scrollbar */
+.l-text-container::-webkit-scrollbar {
+    width: 8px; /* Narrower scrollbar */
+}
+
+.l-text-container::-webkit-scrollbar-track {
+    background: transparent; /* Transparent track */
+}
+
+.l-text-container::-webkit-scrollbar-thumb {
+    background-color: rgba(0, 0, 0, 0.2); /* Minimalist dark thumb */
+    border-radius: 10px; /* Rounded edges for the thumb */
+    border: 2px solid transparent; /* Creates space between the thumb and track */
+}
+
+.l-text-container::-webkit-scrollbar-thumb:hover {
+    background-color: rgba(0, 0, 0, 0.4); /* Darker on hover */
+}
+
 /* Style for h1 */
 .l-title {
     font-size: 1.5em; /* Larger size for h1 */
