--- a/src/styles/Menu.css
+++ b/src/styles/Menu.css
@@ -7,19 +7,20 @@
     right: 0;
     display: flex;
     justify-content: center;
-    padding: 50px 0;
+    padding: 65px 0;
 }
 
 .menu-button {
     margin: 0 10px;
-    padding: 10px 20px;
+    padding: 6px 22px;
     border: 2px solid black;
     border-radius: 20px;
     cursor: pointer;
     text-decoration: none; /* Ensure links have no underline */
-    font-family: 'Arial';
-    font-size: 10px;
-    color: black;
+    font-family: 'Manrope', sans-serif;
+    font-size: 12px;
+    font-weight: 600;
+    color: #656565;
     display: inline-flex;
     align-items: center;
     justify-content: center;
